hoàn thiện dự án 99,7%